# headcrab

./: .cirrus.yml  .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  Info.plist  LICENSE-MIT  README.md  code_of_conduct.md  hello_dylib.rs
.github/: FUNDING.yml
.github/workflows/: build.yml  rust.yml  windows.yml
Documentation/: Design.md  Linux.md  MacOS.md  README.md  Resources.md
examples/: gui.rs  inject_dylib.clif  inject_hello_world.clif  repl.rs
headcrab_inject/: Cargo.toml
headcrab_inject/src/: lib.rs  memory.rs  module.rs
headcrab_inject/tests/: inject_abort.rs  test_utils.rs  testees
repl_tools/: Cargo.toml
repl_tools/src/: lib.rs
src/: error.rs  lib.rs  symbol.rs  target.rs
src/symbol/: dwarf_utils.rs  frame.rs  mod.rs  relocate.rs  source.rs  sym.rs  unwind.rs
tests/: Makefile  attach_readmem.rs  disassemble.rs  fixed_breakpoint.rs  hardware_breakpoint.rs  hello  hello.c  read_locals.rs  readmem.rs  readregs.rs  runtime_breakpoint.rs  source.rs  syscall.rs  test_utils.rs  unwind_stack.rs
tests/testees/: .gitignore  Makefile  hardware_breakpoint.rs  hello.rs  hw_breakpoint.rs  known_asm.S  longer_hello.rs  loop.rs
