[package]
name = "headcrab_inject"
version = "0.2.0"
authors = ["Headcrab Contributors"]
edition = "2018"
description = "A code injection plugin for Headcrab."
repository = "https://github.com/headcrab-rs/headcrab/"
license = "MIT OR Apache-2.0"
categories = ["development-tools::debugging"]
documentation = "https://docs.rs/headcrab_jit"
homepage = "https://headcrab.rs/"
readme = "../README.md"

[dependencies]
headcrab = { version = "0.2.0", path = "../" }
cranelift-codegen = "0.66.0"
cranelift-reader = "0.66.0"
cranelift-module = "0.66.0"
libc = "0.2.76"
target-lexicon = "0.10.0"

[target.'cfg(unix)'.dev-dependencies]
nix = "0.17.0"
