[package]
name = "repl_tools"
version = "0.1.0"
authors = ["Headcrab Contributors"]
edition = "2018"
repository = "https://github.com/headcrab-rs/headcrab/"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "6.2.0"
